<resources>
    <string name="app_name">Find_A_Team</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="continuebtn">CONTINUE</string>
    <string name="enter_your_credentials">Enter Your Credentials</string>
    <string name="am">AM</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="search_team">SEARCH TEAM</string>
    <string name="enter_course">Enter Course</string>
    <string name="messages">MESSAGES</string>
    <string name="create_team">CREATE TEAM</string>
    <string name="evaluate_member">EVALUATE MEMBER</string>
    <string name="my_teams">MY TEAMS</string>
    <string name="singupAM">*AM :</string>
    <string name="p3">p3***</string>
    <string name="signupPassword">*Password :</string>
    <string name="limits">Must be between 6-15 chars</string>
    <string name="email">*Email :</string>
    <string name="confirm_password">*Confirm Password</string>
    <string name="passwords_must_match">Passwords Must match</string>
    <string name="emailhint">***@***.***</string>
    <string name="skills">Skills :</string>
    <string name="knowledge_courses_passed">Knowledge, Courses Passed</string>
    <string name="available_time">Available Time :</string>
    <string name="hintTime">Days followed by Hours</string>
    <string name="mustFill">Fields with * must be filled</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="Student_Name">*Name :</string>
    <string name="Student_Surname">*Surname :</string>
    <string name="Example_Surname">e.g. Papadopoulos</string>
    <string name="Example_Name">e.g. Vasilis</string>
    <string name="create_my_team">CREATE MY TEAM</string>
    <string name="create_a_new_team">CREATE A NEW TEAM</string>
    <string name="requirements">Requirements :</string>
    <string name="Example_Requirements">Courses passed, skills etc</string>
    <string name="apply">APPLY</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string name="course">Course :</string>
    <string name="view">view</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="repeat_password">repeat password</string>
    <string name="change_password">Change Password</string>
    <string name="update_skills">Update Skills</string>
    <string name="update_time">Update Time</string>
    <string name="skillsmess">Skills</string>
    <string name="available_timemess">Available Time</string>
    <string name="rating">Rating</string>
    <string name="submit">Submit</string>
    <string name="team_limit">Team Limit :</string>
    <string name="deadline">Deadline :</string>
    <string name="evaluate">evaluate</string>
</resources>