<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditInfo">

    <EditText
        android:id="@+id/old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/old_password"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintEnd_toEndOf="@+id/old_password"
        app:layout_constraintStart_toStartOf="@+id/old_password"
        app:layout_constraintTop_toBottomOf="@+id/old_password" />

    <EditText
        android:id="@+id/repeat_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintEnd_toEndOf="@+id/new_password"
        app:layout_constraintStart_toStartOf="@+id/new_password"
        app:layout_constraintTop_toBottomOf="@+id/new_password" />

    <EditText
        android:id="@+id/edit_skills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/skills"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/change_password"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/change_password"
        app:layout_constraintTop_toBottomOf="@+id/change_password" />

    <EditText
        android:id="@+id/edit_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/available_time"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/update_skills"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/update_skills"
        app:layout_constraintTop_toBottomOf="@+id/update_skills" />

    <Button
        android:id="@+id/change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="@+id/repeat_password"
        app:layout_constraintStart_toStartOf="@+id/repeat_password"
        app:layout_constraintTop_toBottomOf="@+id/repeat_password" />

    <Button
        android:id="@+id/update_skills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/update_skills"
        app:layout_constraintEnd_toEndOf="@+id/edit_skills"
        app:layout_constraintStart_toStartOf="@+id/edit_skills"
        app:layout_constraintTop_toBottomOf="@+id/edit_skills" />

    <Button
        android:id="@+id/update_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/update_time"
        app:layout_constraintEnd_toEndOf="@+id/edit_time"
        app:layout_constraintStart_toStartOf="@+id/edit_time"
        app:layout_constraintTop_toBottomOf="@+id/edit_time" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>