<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/course"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterProject">

    <EditText
        android:id="@+id/projectname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/course"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <EditText
        android:id="@+id/limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/team_limit"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/projectname"
        app:layout_constraintStart_toStartOf="@+id/projectname"
        app:layout_constraintTop_toBottomOf="@+id/projectname" />

    <EditText
        android:id="@+id/deadlineProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/deadline"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/limit"
        app:layout_constraintStart_toStartOf="@+id/limit"
        app:layout_constraintTop_toBottomOf="@+id/limit" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/deadlineProject"
        app:layout_constraintStart_toStartOf="@+id/deadlineProject"
        app:layout_constraintTop_toBottomOf="@+id/deadlineProject" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="91dp" />
</androidx.constraintlayout.widget.ConstraintLayout>