<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <Button
        android:id="@+id/editInfo"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="Edit Info"
        android:textSize="16sp"
        app:backgroundTint="#931515"
        app:layout_constraintEnd_toEndOf="@+id/My_Teams_Button"
        app:layout_constraintStart_toStartOf="@+id/My_Teams_Button"
        app:layout_constraintTop_toBottomOf="@+id/My_Teams_Button" />

    <Button
        android:id="@+id/Search_Button"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/search_team"
        android:textSize="16sp"
        app:backgroundTint="#931515"
        app:layout_constraintEnd_toEndOf="@+id/Enter_Course"
        app:layout_constraintStart_toStartOf="@+id/Enter_Course"
        app:layout_constraintTop_toBottomOf="@+id/Enter_Course" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="89dp" />

    <EditText
        android:id="@+id/Enter_Course"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/enter_course"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/Message_Button"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/messages"
        android:textSize="16sp"
        app:backgroundTint="#931515"
        app:layout_constraintEnd_toEndOf="@+id/Search_Button"
        app:layout_constraintStart_toStartOf="@+id/Search_Button"
        app:layout_constraintTop_toBottomOf="@+id/Search_Button" />

    <Button
        android:id="@+id/Create_Team_Button"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/create_team"
        android:textSize="16sp"
        app:backgroundTint="#931515"
        app:layout_constraintEnd_toEndOf="@+id/Message_Button"
        app:layout_constraintStart_toStartOf="@+id/Message_Button"
        app:layout_constraintTop_toBottomOf="@+id/Message_Button" />

    <Button
        android:id="@+id/My_Teams_Button"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/my_teams"
        android:textSize="16sp"
        app:backgroundTint="#931515"
        app:layout_constraintEnd_toEndOf="@+id/Create_Team_Button"
        app:layout_constraintStart_toStartOf="@+id/Create_Team_Button"
        app:layout_constraintTop_toBottomOf="@+id/Create_Team_Button" />

</androidx.constraintlayout.widget.ConstraintLayout>